--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-sequential-entrance": "1.1.3",
     "vuex": "^3.0.1",
     "vuex-class-component": "^2.0.4"
   },
