--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
+    "@growthbunker/vuetimeline": "^0.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.1.3",
     "bootstrap-css-only": "^4.3.1",
