Reinstall mdbootstrap and remove firebase config

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^3.3.2",
     "express": "^4.17.1",
     "firebase": "^7.3.0",
+    "mdbootstrap": "^4.8.11",
     "mdbvue": "^6.0.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
