--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-multiselect": "^2.1.6",
+    "vue-notification": "^1.3.20",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vue-sequential-entrance": "1.1.3",
