--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server.js",
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "firebase:deploy": "firebase deploy --only hosting",
@@ -32,6 +32,7 @@
     "mdbootstrap": "^4.8.11",
     "mdbvue": "^6.0.0",
     "register-service-worker": "^1.6.2",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-multiselect": "^2.1.6",
@@ -40,7 +41,12 @@
     "vue-router": "^3.1.3",
     "vue-sequential-entrance": "1.1.3",
     "vuex": "^3.0.1",
-    "vuex-class-component": "^2.0.4"
+    "vuex-class-component": "^2.0.4",
+    "@vue/cli-plugin-router": "^4.0.5",
+    "@vue/cli-plugin-typescript": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.0.5",
+    "@vue/cli-plugin-vuex": "^4.0.5",
+    "@vue/cli-service": "^4.0.5"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
